<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_mover_dynamics" Id="{4721899b-5431-42e3-a8f0-d9e01c00cae7}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_mover_dynamics :
STRUCT
	{attribute 'TagName' := 'title'}
	index: STRING;
	{attribute 'FieldName' := 'axis-a'}
	a: LREAL;
	{attribute 'FieldName' := 'axis-b'}
	b: LREAL;
	{attribute 'FieldName' := 'axis-c'}
	c: LREAL;
	{attribute 'FieldName' := 'axis-x'}
	x: LREAL;
	{attribute 'FieldName' := 'axis-y'}
	y: LREAL;
	{attribute 'FieldName' := 'axis-z'}
	z: LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>